--- a/Recibro/Recibro.csproj
+++ b/Recibro/Recibro.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="bunit" Version="1.34.0" />
+    <PackageReference Include="bunit.template" Version="1.34.0" />
+  </ItemGroup>
+
 </Project>
